Made changes to overflow issues between About Me and Portfolio Section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,7 @@ body {
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
+    overflow: hidden;
 }
 
 .about-text {
